# file-tracer

./: .gitignore  README.md  _agent_test.py  _probe.py
client/: README.md  config.toml  main.py  requirements.txt
client/agent/: cache.py  config.py  debouncer.py  errors.py  events.py  fingerprint.py  main.py  models.py  scanner.py  sender.py  watcher.py  worker.py
client/common/: events.py  fingerprint.py
client/connector/: README.md  agent.py  config.toml  errors.py  mapping.py
client/connector/bridge/: CMakeLists.txt  README.md  bridge_handler.cpp
client/core/: config.toml  core.py  sender.py
client/tests/: test_cache.py  test_config.py  test_connector_agent.py  test_connector_e2e.py  test_core.py  test_debouncer.py  test_events.py  test_fingerprint.py  test_mapping.py  test_models.py  test_scanner.py  test_sender.py  test_smoke.py  test_trace_event.py  test_watcher.py  test_worker.py
docs/superpowers/plans/: 2026-06-09-file-tracer-server-prototype.md  2026-06-10-file-tracer-client-prototype.md  2026-06-10-file-tracer-server-schema.md  2026-06-17-exfiltration-detection.md
docs/superpowers/specs/: 2026-06-09-file-tracer-prototype-design.md  2026-06-10-file-tracer-client-prototype-design.md  2026-06-10-file-tracer-server-schema-design.md  2026-06-17-exfiltration-detection-design.md
server/: README.md  requirements.txt
server/app/: api.py  chain.py  constants.py  errors.py  fingerprint.py  main.py  matching.py  models.py  repository.py
server/app/domain/: chain.py  matching.py
server/app/services/: events.py  registration.py
server/app/static/: index.html
server/tests/: test_api.py  test_chain.py  test_errors.py  test_events.py  test_fingerprint.py  test_matching.py  test_models.py  test_registration.py  test_repository.py  test_smoke.py  test_static.py
